--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 requests==2.28.2
 scikit-learn==1.2.2
-scipy==1.10.1
+# scipy==1.10.1
 six==1.16.0
 sklearn==0.0.post4
 threadpoolctl==3.1.0
